# football-agent

./: .env.example  .gitignore  BROWSER_MCP_INFO.md  BROWSER_MCP_SETUP.md  BROWSER_MCP_SETUP_COMPLETE.md  DOCUMENTATION_INDEX.md  GEMINI.md  MCP_SERVER_INFO.md  MCP_TROUBLESHOOTING.md  MODEL_NOTES.md  Makefile  PORT_CONFIGURATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_PORTS.md  REQUIREMENTS.md  SETUP_NOTES.md  STRUCTURE.md  TOOL_COMPATIBILITY.md  TROUBLESHOOTING.md  UPDATE_NOTES.md  adk_config.yaml  example_usage.py  main.py  mcp_config.json  pyproject.toml  requirements.txt  start_adk_web.sh  start_mcp_servers.sh  verify_setup.py
app/: __init__.py  agent.py  server.py
app/utils/: __init__.py  config.py  league_memory.py
app/utils/tools/: __init__.py  analysis_tools.py  browser_tools.py  league_rules_tool.py  yahoo_tools.py
docs/: ADK_RUNTIME_SETUP.md  MCP_SERVER_INFO.md  PORT_CONFIGURATION.md  TROUBLESHOOTING.md
scripts/: run_daily_setup.py  schedule_daily_run.sh  setup.sh  start_mcp_servers.sh  verify_setup.py
tests/: check_adk_callbacks.py  reproduce_issue.py  test_error_handling.py  test_import.py
tools/: browser_tools.py
